Corrected alignment in AddPersonForm

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,5 +39,5 @@ body {
 }
 
 .add-person-label {
-    text-align: left;
+    text-align: left !important;
 }
